syntax = "proto3";

package greet;

message Greeting {
	string first_name = 1; 
	string last_name = 2;
}

message GreetingRequest {
	Greeting greeting = 1;
}

message GreetingResponse {
	string result = 1;
}

message GreetingStreamRequest {
	string key = 1; 
	string value = 2; 
}

message GreetingStreamResponse {
	string result = 1;
}

service GreetingService {
	// Unary
	rpc Greet (GreetingRequest) returns (GreetingResponse) {}

	// Server streaming 
	rpc GreetLongResponse (GreetingRequest) returns (stream GreetingStreamResponse) {}

	// Client streaming
	rpc GreetLongRequest (stream GreetingStreamRequest) returns (GreetingResponse) {}

	// Bidirectional streaming 
	rpc GreetBidirectional (stream GreetingRequest) returns (stream GreetingResponse) {}

	// Deadline
	rpc GreetWithDeadline (GreetingRequest) returns (GreetingResponse) {}
}